WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269134
The parameter is not fontWeight, but slope for isItalic.
https://bugs.webkit.org/show_bug.cgi?id=269134
Summary
The parameter is not fontWeight, but slope for isItalic.
Noriaki Watanabe
Reported
2024-02-10 05:01:51 PST
To determine if the font is italic, you need the slope rather than the weight.
Attachments
Add attachment
proposed patch, testcase, etc.
Noriaki Watanabe
Comment 1
2024-02-10 05:36:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24203
Radar WebKit Bug Importer
Comment 2
2024-02-17 05:02:13 PST
<
rdar://problem/123148966
>
EWS
Comment 3
2024-04-15 15:02:51 PDT
Committed
277513@main
(3499eb5b0abf): <
https://commits.webkit.org/277513@main
> Reviewed commits have been landed. Closing PR #24203 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug