Rename parameter fontWeight to slope https://bugs.webkit.org/show_bug.cgi?id=269134

Reviewed by Tim Nguyen.

This patch is just rename of `fontWeight` to `slope`.

* Source/WebCore/platform/graphics/FontSelectionAlgorithm.h:
(WebCore::isItalic):

Canonical link: https://commits.webkit.org/277513@main